# Avaframe-Workshop

./: .gitignore  LICENSE  README.md  WS_Task.md  pyproject.toml  qgis-poetry.sh  requirements.txt
Data/Forest/: cmdfile.rcf
Data/Lavangsdalen_data/: RATBF.dbf  RATBF.shp  RATBF.shx  tbfclip.asc  tbfclip.asc.aux.xml
Data/Ryggfonn_2021/: RA20210411_02.shp  dhm.asc.aux.xml  extent.asc  rel_area.asc  rel_area.asc.aux.xml  rgf__MM_S300_05m_k.asc.aux.xml  rgf__MM_S300_05m_mu.asc.aux.xml
Install/: QGIS_Avaframe_MoT.docx
TestData/Forest/: bhd_5m_sn1.asc.aux.xml  treantall_5m_sn1.asc.aux.xml
TestData/Ryggfonn_2021/: RA20210411_02.dbf  RA20210411_02.qix  RA20210411_02.shx  dem_5m.asc  dem_5m.asc.aux.xml
src/motsolverplugin/: RasterOpsDialog.py  metadata.txt
src/motsolverplugin/FileIO/: BinaryTerrain.py  CMDFile.py  ESRI_ASCII_Grid.py  FileReaders.py  GeoFile.py  GeoTiff.py  SDKT_TXT_File.py  TarFileParser.py
src/motsolverplugin/Solver/: Defaults.py  solver.py
src/motsolverplugin/Solver/solvers/: MoT-PSA  MoT-muI
src/rasteropsplugin/: RasterOpsDialog.py  RasterOpsPlugin.py  __init__.py
src/rasteropsplugin/FileIO/: BaseFileReader.py  CSV.py  ESRI_ASCII_Grid.py  FileParser.py  FileUtils.py  FileWriters.py  GeoTiff.py  Octave_OneD.py
src/rasteropsplugin/RasterOp/: Combine.py  Curvature.py  Derivatives.py  Friction.py  Noise.py  Normaliser.py  RasterMethods.py  RasterStats.py  Recipes.py  Rotations.py
src/rasteropsplugin/RasterOp/assets/: fric_coeffs_RAMMS_10-300y.txt
